# snake-game-gui

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: ColorPalette.h  Constants.h  Food.h  Game.h  GameWindow.h  Menu.h  MenuButton.h  MenuWindow.h  Record.h  ResourceManager.h  Snake.h  Utils.h  segment.h
src/: Food.cpp  Game.cpp  GameWindow.cpp  Menu.cpp  MenuButton.cpp  MenuWindow.cpp  Record.cpp  ResourceManager.cpp  Snake.cpp  Utils.cpp  main.cpp  records.txt
